# agentic_langgraph

./: pyproject.toml  requirements.txt
1-BasicChatbot/: 1-basic-chatbot.ipynb  humanintheloop.ipynb
3-MCP/: client.py  mathserver.py  weather.py
4-Debugging/: agent.py  debugging.ipynb  langgraph.json
Agents/: multiaiagent.ipynb
