[project]
name = "agentic-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.6",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.2",
    "langgraph-cli[inmem]>=0.3.4",
    "langsmith>=0.4.5",
    "mcp>=1.11.0",
    "python-dotenv>=1.1.1",
]
